Partial dynamic-access coverage for io.netty.util.internal.PlatformDependent0 (2/4)